arm64: dts: qcom: sdm660/sdm630: add zap-shader node
Add zap-shader node for adreno_gpu to be able to load zap shader
firmware, which is required for working GPU.

According to drivers/gpu/drm/msm/adreno/adreno_device.c, Adreno 508
(found in SDM630) uses it's own a508_zap, Adreno 509 (found in
SDM636) uses same a512_zap as Adreno 512.

Signed-off-by: Barnabás Czémán <trabarni@gmail.com>

--- a/arch/arm64/boot/dts/qcom/sdm630.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm630.dtsi
@@ -1189,6 +1189,11 @@
 				};
 				*/
 			};
+
+			zap-shader {
+				memory-region = <&zap_shader_region>;
+				firmware-name = "a508_zap.mbn";
+			};
 		};
 
 		kgsl_smmu: iommu@5040000 {
