--- a/Documentation/devicetree/bindings/arm/qcom.yaml
+++ b/Documentation/devicetree/bindings/arm/qcom.yaml
@@ -858,6 +858,8 @@ properties:
       - items:
           - enum:
               - xiaomi,lavender
+              - xiaomi,lavender-boe
+              - xiaomi,lavender-tianma
           - const: qcom,sdm660
 
       - items:
