--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -543,6 +543,15 @@ config DRM_PANEL_NOVATEK_NT36672_TXD
 	  Say Y here if you want to enable support for nt36672_txd
 	  video mode panel used in Asus Zenfone Max Pro M1 phone (codename x00td)
 
+config DRM_PANEL_SMD_601_V0
+	tristate "SMD panel for motorola-beckham"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for SMD 601 V0
+	  video mode panel used in Motorola Moto Z3 Play phone (codename beckham)
+
 config DRM_PANEL_NOVATEK_NT39016
 	tristate "Novatek NT39016 RGB/SPI panel"
 	depends on OF && SPI
